@@ -1,4 +1,5 @@
 3.0.15
+ * Wait for all management tasks to complete before shutting down CLSM (CASSANDRA-13123)
  * INSERT statement fails when Tuple type is used as clustering column with default DESC order (CASSANDRA-13717)
  * Fix pending view mutations handling and cleanup batchlog when there are local and remote paired mutations (CASSANDRA-13069)
  * Improve config validation and documentation on overflow and NPE (CASSANDRA-13622)
